...
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/favourite_layout_item">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:padding="5dp"
            android:id="@+id/imageView_Favourite_item"/>

        <TextView
            android:id="@+id/textView_recipe_name_favourite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="5"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textSize="20sp"
            android:text="@{value}" />

        <ImageButton
            android:id="@+id/button_remove_recipe_from_favourites"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

    </LinearLayout>
...
