...
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:id="@+id/recyclerView_feed" />

    <ProgressBar
        android:id="@+id/feed_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

...
