<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="value"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/feed_layout_item">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:padding="5dp"
            android:id="@+id/imageView_Feed_item"/>

        <TextView
            android:id="@+id/textView_recipe_name_feed"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textSize="20sp"
            android:text="@{value}" />

    </LinearLayout>
</layout>